--- a/QEC_HEC_SU/WebContent/WEB-INF/web.xml
+++ b/QEC_HEC_SU/WebContent/WEB-INF/web.xml
@@ -29,14 +29,15 @@
   	<!-- End Spring Mappings  -->
   	
   	<!-- Spring Security Filter should come before that of Struts2 -->
-<!-- 	<filter>
+ 	<filter>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
 	</filter>
+	
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
-	</filter-mapping> -->
+	</filter-mapping>
   	
   	<!-- Start mapping of all resources like images/css/javascript etc  -->
   	
